--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,3 +1,6 @@
-libstdcxx:  # [linux]
-  - 13      # [linux]
-  - 14      # [linux]
+python_variants:
+  - 3.10
+  - 3.11
+  - 3.12
+  - 3.13
+  - 3.14
