WIP: understanding the difference between build/host on cross-compiled recipes. cmake complains that doxygen is missing

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -33,6 +33,7 @@ requirements:
     - {{ compiler('cxx') }}
     - make
     - cmake >=3.18
+    - doxygen
   host:
     - python {{ python }}
     - breathe >=4.3.0
