--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -7,7 +7,7 @@ package:
 
 source:
   url: https://github.com/UCBoulder/{{ name }}/archive/refs/tags/{{ version }}.tar.gz
-  sha256: e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
+  sha256: 6b9f76b87010bbae7cdfaf97f55f41a2710bb4f9d6d817afd10a01af92f5263a
 
 build:
   number: 0
@@ -35,25 +35,24 @@ requirements:
     - cmake >=3.18
     - doxygen
   host:
-    - python {{ python }}
     - breathe >=4.3.0
+    - clang-tools
+    - doxygen
+    - libboost-python-devel >=1.82
+    - pip
+    - python-build
+    - setuptools >=77
+    - setuptools_scm >=8
     - sphinx >=3.0.4
     - sphinx_rtd_theme >=0.4.3
     - sphinxcontrib-bibtex
-    - python-build
-    - pip
-    - cython
-    - setuptools >=62
-    - setuptools_scm >=6.2
-    - eigen >=3.3.7
-    - libboost-python-devel >=1.59
-    - doxygen
   run:
     - python
 
 test:
   requires:
     - {{ compiler('cxx') }}
+    - clang-tools
     - pytest
     - pytest-xdist
     - make
