MAINT: Bringing up to date with repository recipe

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -26,15 +26,13 @@ build:
 
 requirements:
   build:
-    - python                                 # [build_platform != target_platform]
+    - python
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
     - cython
     - {{ stdlib('c') }}
     - {{ compiler('cxx') }}
     - make
-    - cmake >=3.18
-    - doxygen
-  host:
+    - cmake >=3.30
     - breathe >=4.3.0
     - clang-tools
     - doxygen
@@ -46,18 +44,24 @@ requirements:
     - sphinx >=3.0.4
     - sphinx_rtd_theme >=0.4.3
     - sphinxcontrib-bibtex
+  host:
+    - python {{ python }}
+    - pip
+    - cython
+    - setuptools >=77
+    - setuptools_scm >=8
   run:
     - python
 
 test:
   requires:
     - {{ compiler('cxx') }}
-    - clang-tools
     - pytest
     - pytest-xdist
     - make
-    - cmake >=3.18
-    - libboost-python-devel >=1.59
+    - cmake >=3.30
+    - clang-tools
+    - libboost-python-devel >=1.82
     - doxygen
     - sphinx >=3.0.4
   source_files:
